--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 	<head>
 		<title>- LGV -</title>
 	</head>
-	
+			
 	<body>
-		
+		<!--			
+				Some Image here and there, Make them
+				neat and once clicked, go to the article.
+		-->
+
 	</body>
 </html>
