--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>- LGV -</title>
+		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>		
+		<meta name="Description" content="GitBlog and Portfolio">
+		<meta charset="UTF-8">
 	</head>
 			
 	<body>
@@ -9,6 +12,10 @@
 				Some Image here and there, Make them
 				neat and once clicked, go to the article.
 		-->
-
+		<div>
+			<section>
+				
+			</section>
+		</div>
 	</body>
 </html>
