--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>- LGV -</title>
-		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>		
+		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="styleTemp.css">
 		<meta name="Description" content="GitBlog and Portfolio">
 		<meta charset="UTF-8">
 	</head>
@@ -14,7 +15,7 @@
 		-->
 		<div>
 			<section>
-				
+				<canvas id = "firstBox"> If you see this, Update your Browser!</canvas>				
 			</section>
 		</div>
 	</body>
