--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 		-->
 		<div>
 			<section>
-				<canvas id = "firstBox"> If you see this, Update your Browser!</canvas>				
+				<canvas id = "firstBox"> If you see this, Update your Browser!</canvas>	
+					<script>
+						var c=document.getElementById('myCanvas');
+						var ctx=c.getContext('2d');
+						ctx.fillStyle='#FF0000';
+						ctx.fillRect(0,0,80,100);
+					</script>
 			</section>
 		</div>
 	</body>
