--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 	<head>
 		<title>- LGV -</title>
 		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		
+		<script src="jsTemp"></script>
 		<link rel="stylesheet" type="text/css" href="styleTemp.css">
+		
+		
 		<meta name="Description" content="GitBlog and Portfolio">
 		<meta charset="UTF-8">
 	</head>
@@ -16,9 +20,6 @@
 		<div>
 			<section>
 				<canvas id = "firstBox"> If you see this, Update your Browser!</canvas>	
-					<script>
-						
-					</script>
 			</section>
 		</div>
 	</body>
