--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>- LGV -</title>
 		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		
-		<script src="jsTemp" type="text/javascript"></script>
+		<script src="jsTemp.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="styleTemp.css">
 		
 		
