--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta charset="UTF-8">
 	</head>
 			
-	<body>
+	<body onload="draw();">
 		<!--			
 				Some Image here and there, Make them
 				neat and once clicked, go to the article.
