--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div>
 			<section>
 				<canvas id="firstBox"> If you see this, Update your Browser!</canvas>
-				<script src="jsTemp.js" type="application/javascript"></script>
+				<script src="jsTemp.js"></script>
 
 			</section>
 		</div>
