--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="UTF-8">
 	</head>
 			
-	<body onload="draw();">
+	<body>
 		<!--			
 				Some Image here and there, Make them
 				neat and once clicked, go to the article.
