--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>- LGV -</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="styleTemp.css">
+		<link rel="stylesheet" type="text/css" href="Scripts/css/styleTemp.css">
 		
 		
 		<meta name="Description" content="GitBlog and Portfolio">
@@ -18,7 +18,7 @@
 		<div>
 			<section>
 				<canvas id="firstBox"> If you see this, Update your Browser!</canvas>
-				<script src="jsTemp.js"></script>
+				<script src="Scripts/js/jsTemp.js"></script>
 			</section>
 		</div>
 	</body>
