--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
 				<script src="Scripts/js/jsTemp.js"></script>
 			</section>
 		</div>
+		<div>
+			<a href="http://louisgv.github.io/prepare">	Prepare Master </a>
+			<p>No Surprise</p>
+		</div>
+		
+		
 	</body>
 </html>
