--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 			</section>
 		</div>
 		<div>
-			<a href="http://louisgv.github.io/prepare">	Prepare Master </a>
-			<p>No Surprise</p>
+			<section>
+				<a href="http://louisgv.github.io/prepareM">	Prepare Master </a>
+				<p>No Surprise</p>
+			</section>
 		</div>
 		
 		
