--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 				neat and once clicked, go to the article.
 		-->
 		<div>
+			<section>
 				<canvas id="firstBox"> If you see this, Update your Browser!</canvas>
 				<script src="Scripts/js/jsTemp.js"></script>
+			</section>
 		</div>
 		<div>
 			<section>
