--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE  html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>- LGV -</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="Scripts/css/styleTemp.css">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		
-		
+		<title>LGV</title>
+		<link rel="stylesheet" type="text/css" href="Scripts/css/index.css">
 		<meta name="Description" content="GitBlog and Portfolio">
 		<meta charset="UTF-8">
 	</head>
-			
-	<body>
-		<!--			
-				Some Image here and there, Make them
-				neat and once clicked, go to the article.
-		-->
-		<div>
-			<section>
-				<canvas id="firstBox"> If you see this, Update your Browser!</canvas>
-				<script src="Scripts/js/jsTemp.js"></script>
-			</section>
+	<!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
+	<body id="mainPage">
+		<!--Side Bar !!Will be move to another page for profile etc..-->
+		<!--Avatar-->
+		<div class ="avatar">
+			<!--javascrip:void(0) ??-->
+				<a href="https://github.com/louisgv">
+					<img class="avatar center"
+						src="Img/mainAvatar.png"						
+						/>
+				</a>
 		</div>
-		<div>
-			<section>
-				<a href="http://louisgv.github.io/prepareM">	Prepare Master </a>
-				<p>No Surprise</p>
-			</section>
+		<!--Projects Line 1 (will be a binary tree or quad or etc...)-->
+		<div class="splat project" id="slide1">
 		</div>
+	
+	Hello there.
 		
-		
+	<!--Scripts-->	
+	 <script type="text/javascript" src="Scripts/js/jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="Scripts/js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="Scripts/js/bootstrap-slider.js"></script>
+	<script type="text/javascript" src="Scripts/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="Scripts/js/md5.js"></script>
+	<script type="text/javascript" src="Scripts/js/morris.min.js"></script>
+	<script type="text/javascript" src="Scripts/js/store.min.js"></script>
 	</body>
+	<script src="Scripts/js/index.js"></script>
+
 </html>
