--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
-	<body id="mainPage">
+	<body class="mainPage">
 		<!--Side Bar !!Will be move to another page for profile etc..-->
 		<!--Avatar-->
 		<div class ="avatar">
