--- a/index.html
+++ b/index.html
@@ -1,40 +1,59 @@
 <!DOCTYPE  html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		
-		<title>LGV</title>
-		<link rel="stylesheet" type="text/css" href="Scripts/css/index.css">
-		<meta name="Description" content="GitBlog and Portfolio">
-		<meta charset="UTF-8">
-	</head>
-	<!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
-	<body class="mainPage">
-		<!--Side Bar !!Will be move to another page for profile etc..-->
-		<!--Avatar-->
-		<div class ="avatar">
-			<!--javascrip:void(0) ??-->
-				<a href="https://github.com/louisgv">
-					<img class="avatar center"
-						src="Img/mainAvatar.png"						
-						/>
-				</a>
-		</div>
-		<!--Projects Line 1 (will be a binary tree or quad or etc...)-->
-		<div class="splat project" id="slide1">
-		</div>
-	
-	Hello there.
-		
-	<!--Scripts-->	
-	 <script type="text/javascript" src="Scripts/js/jquery-2.1.0.min.js"></script>
-	<script type="text/javascript" src="Scripts/js/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="Scripts/js/bootstrap-slider.js"></script>
-	<script type="text/javascript" src="Scripts/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="Scripts/js/md5.js"></script>
-	<script type="text/javascript" src="Scripts/js/morris.min.js"></script>
-	<script type="text/javascript" src="Scripts/js/store.min.js"></script>
-	</body>
-	<script src="Scripts/js/index.js"></script>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<title>[LGV]</title>
+<link rel="Icon" type="image/ico" href="Img/AngeI001.png" />
+<link rel="stylesheet" type="text/css" href="Scripts/css/slider.css">
+<link rel="stylesheet" type="text/css" href="Scripts/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="Scripts/css/select2.css">
+<link rel="stylesheet" type="text/css" href="Scripts/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="Scripts/css/bootstrap-theme.min.css">
+<link rel="stylesheet" type="text/css" href="Scripts/css/index.css">
+<meta name="Description" content="GitBlog and Portfolio">
+<meta charset="UTF-8">
+</head>
+<!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
+<body class="mainPage">
+<!--Side Bar !!Will be move to another page for profile etc..-->
+<!--Avatar-->
+<div>
+<!--https://github.com/louisgv-->
+<a href="">
+<img id="avatar" class="span"
+src="Img/mainAvatar.png"	
+/>
+<!-- Replace the Above with a Canvas, draw the angel there.-->
+</a>
+</div>
+
+<div>
+<nav id="node">
+<a id = "button" href="#">+</a>
+<ul>
+<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
+<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
+<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
+<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
+<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
+</ul>
+</nav>
+</div>
+
+
+<!--Scripts-->	
+<script type="text/javascript" src="Scripts/js/jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="Scripts/js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="Scripts/js/bootstrap-slider.js"></script>
+<script type="text/javascript" src="Scripts/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="Scripts/js/md5.js"></script>
+<script type="text/javascript" src="Scripts/js/morris.min.js"></script>
+<script type="text/javascript" src="Scripts/js/store.min.js"></script>
+<script type="text/javascript" src="Scripts/js/skrollr.min.js"></script>
+<script type="text/javascript" src="Scripts/js/menu-radial-beaucollins.js"></script>
+<script type="text/javascript" src="Scripts/js/index.js"></script>
+
+</body>
 
 </html>
