--- a/index.html
+++ b/index.html
@@ -1,59 +1,134 @@
 <!DOCTYPE  html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<title>[LGV]</title>
-<link rel="Icon" type="image/ico" href="Img/AngeI001.png" />
-<link rel="stylesheet" type="text/css" href="Scripts/css/slider.css">
-<link rel="stylesheet" type="text/css" href="Scripts/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="Scripts/css/select2.css">
-<link rel="stylesheet" type="text/css" href="Scripts/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="Scripts/css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="Scripts/css/index.css">
-<meta name="Description" content="GitBlog and Portfolio">
-<meta charset="UTF-8">
+<head>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title> [LGV] </title>
+    <meta name="author" 			content="Louis Vichy @LGVichy">
+    <meta name="viewport" 		content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" 	content="GitBlog and Portfolio MKI">
+
+    <!--Styles-->
+    <link rel="Icon" 				type="image/ico" 	href="Img/AngeI001.png" />
+    <link rel="stylesheet" type="text/css" 		href="Scripts/css/slider.css">
+    <link rel="stylesheet" type="text/css" 		href="Scripts/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css"		href="Scripts/css/index.css">
+
 </head>
 <!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
-<body class="mainPage">
-<!--Side Bar !!Will be move to another page for profile etc..-->
-<!--Avatar-->
-<div>
-<!--https://github.com/louisgv-->
-<a href="">
-<img id="avatar" class="span"
-src="Img/mainAvatar.png"	
-/>
-<!-- Replace the Above with a Canvas, draw the angel there.-->
-</a>
-</div>
 
-<div>
-<nav id="node">
-<a id = "button" href="#">+</a>
-<ul>
-<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
-<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
-<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
-<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
-<li><a href="#"><img id="avatar" class="span" src="Img/AngeI000.png" /></a></li>
-</ul>
-</nav>
-</div>
+<body>
+    <!--Avatar-->
+    <div 
+		id 					= 	"skroll-body"
+		class				= 	"full-screen" 
+		data-0			= 	"background-color:rgb(65,74,76);" 
+		data-1000 	=		"background-color:rgb(0, 127, 255);">
+        <!--https://github.com/louisgv-->
+        <!--LinkedIn-->
+        <!--Twitter-->
+        <!--FaceBook-->
+        <!--Other Projects?-->
+         <div id 	  = "AngeISprite">
+			<a href="">
+				<img 
+					class 				=		"sprite no1"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 47.45%; top: 10px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no2"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 52.55%; top: 10px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no3"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 47.45%; top: 64px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no4"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 52.55%; top: 64px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no5"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 42.4%; top: 118px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no6"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 47.45%; top: 118px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no7"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 52.55%; top: 118px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no8"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 57.65%; top: 118px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="https://github.com/louisgv">
+				<img 
+					class 				=		"sprite no9"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 47.45%; top: 118px; transform:rotate(270deg);"
+					data-999 	=		"position: fixed; left: 50%; top: 40px; transform:rotate(315deg)"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no10"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 52.55%; top: 118px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no11"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 47.45%; top: 172px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+			<a href="">
+				<img 
+					class 				=		"sprite no12"
+					src					=		"Img/tri.png"
+					data-0 			=		"position: fixed; left: 52.55%; top: 172px"
+					data-999 	=		"position: fixed; left: 50%; top: 10px"/>
+			</a>
+		</div>
 
+    </div>
 
-<!--Scripts-->	
-<script type="text/javascript" src="Scripts/js/jquery-2.1.0.min.js"></script>
-<script type="text/javascript" src="Scripts/js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="Scripts/js/bootstrap-slider.js"></script>
-<script type="text/javascript" src="Scripts/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="Scripts/js/md5.js"></script>
-<script type="text/javascript" src="Scripts/js/morris.min.js"></script>
-<script type="text/javascript" src="Scripts/js/store.min.js"></script>
-<script type="text/javascript" src="Scripts/js/skrollr.min.js"></script>
-<script type="text/javascript" src="Scripts/js/menu-radial-beaucollins.js"></script>
-<script type="text/javascript" src="Scripts/js/index.js"></script>
+    <!--Scripts-->
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
+    <script src="Scripts/js/skrollr.min.js"></script>
+    <script src="Scripts/js/jquery.index.js"></script>
+    <script src="Scripts/js/index.js"></script>
 
 </body>
 
 </html>
+
