--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div id="banner" class="container">
                 <div class="title">
                     <h2>My name is Louis</h2>
-                    <span class="byline">A Game Designer, Concept Artist, Programmer, and Jazz player</span>
+                    <span class="byline">A Training Game Designer, Concept Artist, Programmer, and Jazz player</span>
                 </div>
                 <div> <h3>Scroll down for More...</h3></div>
                 <ul class="actions">
@@ -175,7 +175,7 @@
                     <div id="three-column" class="container">
                         <div class="title">                                    
                             <h2>Game Jam</h2>
-                            <span class="byline">These are jam blogs from teammates whom I have the opportunity to work with</span>
+                            <span class="byline">These are jam blogs from teammates whom I have had the opportunity to work with</span>
                         </div>
                         <div class="boxA">
                             <span class="fa fa-compress"></span>
