--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div id="three-column" class="container">
                         <div class="title">                                    
                             <h2>I'm Learning</h2>
-                            <span class="byline">My Passion is to become the greatest Game Designer of all Time</span>
+                            <span class="byline">My Goal is to become a Game Director who Respect his Peer, and be able to Works with Everyone at the scene</span>
                         </div>
                         <div class="boxA">
                             <span class="fa fa-github"></span>
