--- a/Pages/GeoWatcher/watcher.html
+++ b/Pages/GeoWatcher/watcher.html
@@ -13,13 +13,15 @@
 
 <script>
 var x = document.getElementById("demo");
-
+var xmlhttp = new XMLHttpRequest();
 function getLocation() {
     if (navigator.geolocation) {
         navigator.geolocation.watchPosition(showPosition);
     } else { 
-        x.innerHTML = "Geolocation is not supported by this browser.";}
+        x.innerHTML = "Geolocation is not supported by this browser.";
+		}
     }
+	
     
 function showPosition(position) {
     x.innerHTML="Latitude: " + position.coords.latitude + 
@@ -37,6 +39,13 @@ function mapPosition(position) {
 "&zoom=14&size=600x300&sensor=false";
 
     document.getElementById("mapholder").innerHTML = "<img src='"+img_url+"'>";
+	
+	var url = 
+	"www.meretrax.com/whereismybike.php?lat="+position.coords.latitude+ "&long=" +  position.coords.longitude;
+	
+	xmlhttp.open("GET", url, true);
+	xmlhttp.send();
+	
 
 }
 
