--- a/Pages/GeoWatcher/watcher.html
+++ b/Pages/GeoWatcher/watcher.html
@@ -4,7 +4,8 @@
 
 <p>Click the button to get your coordinates.</p>
 
-<button onclick="getLocation(); ">Try It</button>
+<button onclick="getLocation(); ">Try It!</button>
+<button onclick="stopLocation(); ">Stop It!</button>
 
 <p id="demo"> </p>
 
@@ -14,6 +15,13 @@
 <script>
 var x = document.getElementById("demo");
 var xmlhttp = new XMLHttpRequest();
+function stopLocation() {
+ if (navigator.geolocation) {
+        navigator.geolocation.clearWatch(showPosition);
+		x.innerHTML = "";
+    }
+}
+
 function getLocation() {
     if (navigator.geolocation) {
         navigator.geolocation.watchPosition(showPosition);
@@ -24,7 +32,7 @@ function getLocation() {
 	
     
 function showPosition(position) {
-    x.innerHTML="Latitude: " + position.coords.latitude + 
+    x.innerHTML += "<br>Latitude: " + position.coords.latitude + 
     "<br>Longitude: " + position.coords.longitude;
 	//+ "<br>Speed: " + position.coords.speed ;
 	//mapPosition(position);
