--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 
 <body>
   <!--Avatar-->
+
+  <div class="contact linkedin">
+    <a href="https://www.linkedin.com/pub/louis-vichy/88/a08/110">
+      <span class="fa fa-linkedin"></span>
+    </a>
+  </div>
+
+  <div class="contact facebook">
+    <a href="https://www.facebook.com/billhainh">
+      <span class="fa fa-facebook"></span>
+    </a>
+  </div>
+
+  <div class="contact twitter">
+    <a href="https://twitter.com/LGVichy">
+      <span class="fa fa-twitter"></span>
+    </a>
+  </div>
+
   <div class="header-wrapper">
     <div id="header" class="container span">
       <div id="logo">
@@ -43,6 +62,9 @@
 		</ul>
 	    </div>
 	    -->
+
+
+
     <div id="banner" class="container">
       <div class="title">
         <h2>I am LAB</h2>
@@ -125,7 +147,7 @@
       <div id="wrapper">
         <div id="three-column" class="container">
           <div class="title">
-            <h2>Researches, Side-projects</h2>
+            <h2>Research, Side-projects</h2>
             <span class="byline"> I did several side projects to research concepts and tools</span>
           </div>
           <div class="boxA">
@@ -447,15 +469,14 @@
         <div style="height: 90px"></div>
 
         <div id="thanks">
-          <h1>Thanks and Have a Great day!</h1>
+          <h1>Thanks for Reading!</h1>
         </div>
-
 
       </div>
 
     </div>
     <div id="copyright" class="container">
-      <p>&copy; L.A.B. All rights reserved. | Photos by Louis | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+      <p>&copy; L.A.B. All rights reserved. | Content by Louis | Code by Alex | Design by Bill </p>
     </div>
 
     <!--Scripts-->
