--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   <link rel="stylesheet" type="text/css" href="Scripts/css/index.css" />
   <link rel="stylesheet" type="text/css" href="Scripts/css/default.css" />
 
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-63900039-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 </head>
 <!-- Main page design: A trial of dark ink flow from the main image. Will be the same as one of those palla-->
 <!--<img class="span"src="Images/AngeI000.png"/>-->
