--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!--Avatar-->
 
   <div class="contact linkedin">
-    <a href="https://www.linkedin.com/pub/louis-vichy/88/a08/110">
+    <a href="https://www.linkedin.com/in/louisgv">
       <span class="fa fa-linkedin"></span>
     </a>
   </div>
@@ -457,31 +457,75 @@
           <div class="boxB">
             <span class="fa fa-compress"></span>
             <p>
-              <h3>Hack 5, March 2015: Copy Trade</h3>
+              <h3>Hack 5, March 2015: CopyTrade</h3>
             </p>
             <p>Copy the Best Trader!</p>
             <p>Position: Designer</p>
             <p> Got to meet and worked with a big guy and a smaller guy! Free comedy show right there!</p>
             <p>Teammates: Amit Deo, Dilip Puluru </p>
-            <!--
+
           </div>
           <div class="boxC">
             <span class="fa fa-compress"></span>
             <p>
-              <h3>Hack 3, August 2014: Punctuality || Betcha! </h3>
+              <h3>Hack 6, May 2015: TravelTag </h3>
             </p>
-            <p>A betting app utilizing youbetme API for micro-social betting. Not many coders were there, only enthusiastic entrepreneurs and some designers.</p>
-            <p> Got into Wale's team, he suggested the idea of a betting to arrive at a destination on-time.</p>
-            <p>Position: UX front-end designer </p>
-            <p>Made a mock-up app using popapp.</p>
-            <p>The event was fun! Got to know more hacker and the code school location!</p>
-            <p>Teammates: Bennett Lin, Wale Ogundipe, Jonah Kirangi and Kevin Xue </p>
-            <a href="https://popapp.in/w/projects/53f88c17485826e502829141/preview" class="button button-alt">Puntuality || BetCha!</a>
+            <p>A travel logging app for frequent traveler, with map-my-journey technology and a quick-tag-logging scheme.</p>
+            <p>Stumbled upon Garrett who proposed a very cool story about the hustle of travelers when they wanted to capture their moments. Teamed up with Bogdan, a pretty cool Ruby on Rail guy and two other partial-devs.</p>
+            <p>Position: Designer, Strategist </p>
+            <p>We've got a mock-up web-app with full user-flow!</p>
+            <p>The event was pretty cool! We won the top-spot overall of the hack! Also, gotta investigate the two hackers who made encryption program! They're pretty cool!</p>
+            <p>Teammates: Garret, Bogdan, 2 other guy.</p>
+            <a href="http://bpshonyak.github.io/TravelTag_App/">TravelTag</a>
 
           </div>
-        -->
+
           </div>
         </div>
+
+        <div id="wrapper">
+          <div id="three-column" class="container">
+
+            <div class="boxA">
+              <span class="fa fa-compress"></span>
+              <p>
+                <h3>Hack 7, June 2015: Next 911</h3>
+              </p>
+              <p>Predict the next 911 call based on location and time! Open data from <a href="https://data.seattle.gov">Data.Seattle</a>, trained with Microsoft's Azure ML cloud!</p>
+              <p>Position: Data Analytic, Feature Design</p>
+              <p>The returned result was pretty interesting...</p>
+              <p> </p>
+
+              <p>Teammates: Ori Hadary, Seaton Gras </p>
+            </div>
+
+            <div class="boxB">
+              <span class="fa fa-compress"></span>
+              <p>
+                <h3>Hack 8, June 2015: Appointly</h3>
+              </p>
+              <p>TDA</p>
+              <p>Position: Lead Developer</p>
+              <p> Go with swaggs</p>
+              <p>Teammates: Jim, Aryan, Bogdan, Bryan, Billhainh</p>
+            </div>
+            <!-- <div class="boxC">
+              <span class="fa fa-compress"></span>
+              <p>
+                <h3>Hack 6, May 2015: TravelTag </h3>
+              </p>
+              <p>A travel logging app for frequent traveler, with map-my-journey technology and a quick-tag-logging scheme.</p>
+              <p>Stumbled upon Garrett who proposed a very cool story about the hustle of travelers when they wanted to capture their moments. Teamed up with Bogdan, a pretty cool Ruby on Rail guy and two other partial-devs.</p>
+              <p>Position: Designer, Strategist </p>
+              <p>We've got a mock-up web-app with full user-flow!</p>
+              <p>The event was pretty cool! We won the top-spot overall of the hack! Also, gotta investigate the two hackers who made encryption program! They're pretty cool!</p>
+              <p>Teammates: Garret, Bogdan, 2 other guy.</p>
+              <a href="http://bpshonyak.github.io/TravelTag_App/">TravelTag</a>
+
+            </div> -->
+
+            </div>
+          </div>
 
         <div style="height: 90px"></div>
 
